# CMMS

./: .dockerignore  .env.example  .gitignore  .mcp.env.example  .mcp.json  APPROVAL_SYSTEM_FIXES.md  BACKEND_MODULE_STRUCTURE.md  BRANCH_NAMING_CONVENTION.md  CMMS_Software_Requirements_Specification.docx  CMMS_Test_Case_Design.docx  CODE_CLEANUP_REPORT.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  CONNECTIVITY_AUDIT_REPORT.md  CONNECTIVITY_FIX_SUMMARY.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  END_TO_END_COMPLETE_GUIDE.txt  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FRONTEND_MODULE_STRUCTURE.md  GITHUB_PUSH_GUIDE.md  GITHUB_READINESS_CHECKLIST.md  GITHUB_READY.md  GITHUB_SECRETS_SETUP.md  GMAIL_SMTP_RENDER_SETUP.md  IMPLEMENTATION_COMPLETE_NEW_ROLE_SYSTEM.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_3STEP_SIGNUP.md  JIRA_SETUP_SUCCESS.md  MCP_INTEGRATION_CHECKLIST.md  MCP_OVERVIEW.md  MCP_SETUP.md  Makefile  PROJECT_REVIEW.md  QUICK_START.md  QUICK_START_3STEP_SIGNUP.md  README.md  README_TEST_DOCUMENTATION.md  RENDER_EMAIL_SETUP.md  SETUP_COMPLETE.md  (+30 more)
backend/: .env.example  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements-essential.txt  requirements.txt  test_email.py  test_sprint1.py
database/: init.sql
docs/: CMMS_Admin_User_Manual_v5.docx  CMMS_User_Manual_v5.docx  OTP_SYSTEM.md  THREE_STEP_SIGNUP_FLOW.md  THREE_STEP_SIGNUP_IMPLEMENTATION.md  generate_manual.py
documentation/: CMMS_MONOREPO_STRUCTURE.md  CMMS_PROJECT_MASTER.md  CMMS_Specification_v2.docx  CMMS_Specification_v2.txt  DOCUMENTATION_INDEX.md  JIRA_PROJECT_STRUCTURE.md  (+3 more)
(+248 files in other folders)
